--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     transform: translateX(-50%) translateY(-50%);
 }
 
+.btn-circle {
+    border-radius: 50% !important;
+    height: 40px;
+    width: 40px;
+}
+
 /* ---------------------------------------------------
     CONTENT
 ----------------------------------------------------- */
