Updated style.css and index.html

--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
     width: 40px;
 }
 
+#categories {
+    border-color:#DD5246 !important;
+}
 /* ---------------------------------------------------
     CONTENT
 ----------------------------------------------------- */
