Added product.html example w/ css stuff
kinder surprise lol as it is a template for the products

--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ a {
 /* ---------------------------------------------------
     CONTENT
 ----------------------------------------------------- */
+#price{
+    font-size: 2rem;
+}
 /* ---------------------------------------------------
     MEDIA
 ----------------------------------------------------- */
