--- a/style.css
+++ b/style.css
@@ -92,7 +92,21 @@ a {
     box-shadow: 0 0 0 .2rem rgba(255, 51, 51, .5) !important;
 }
 
-
+.noselect {
+    -webkit-touch-callout: none !important;
+    /* iOS Safari */
+    -webkit-user-select: none !important;
+    /* Safari */
+    -khtml-user-select: none !important;
+    /* Konqueror HTML */
+    -moz-user-select: none !important;
+    /* Old versions of Firefox */
+    -ms-user-select: none !important;
+    /* Internet Explorer/Edge */
+    user-select: none !important;
+    /* Non-prefixed version, currently
+                                    supported by Chrome, Opera and Firefox */
+}
 
 /* ---------------------------------------------------
     MEDIA
